[gd_scene load_steps=22 format=3 uid="uid://cjh63qsfppfuj"]

[ext_resource type="Script" path="res://player/player_character.gd" id="1_s6asm"]
[ext_resource type="Texture2D" uid="uid://blv8cjwi37pji" path="res://player/player.png" id="1_s6gg6"]
[ext_resource type="AudioStream" uid="uid://dnu0heqxoawj2" path="res://audio/jump.wav" id="3_ead5v"]
[ext_resource type="PackedScene" uid="uid://u3aqy56v3lct" path="res://abilities/jumps/jump_ability.tscn" id="4_2s0ke"]
[ext_resource type="Script" path="res://state_machines/state_machine.gd" id="4_30n41"]
[ext_resource type="PackedScene" uid="uid://dv7f6dbvkub6o" path="res://abilities/grabs/grab_ability.tscn" id="5_imdsf"]
[ext_resource type="Script" path="res://state_machines/player_states/player_idle.gd" id="5_prgrc"]
[ext_resource type="Script" path="res://state_machines/player_states/player_busy.gd" id="8_togvs"]
[ext_resource type="PackedScene" uid="uid://bf0t7p504n8ha" path="res://abilities/dashes/slime_ability.tscn" id="8_vthax"]

[sub_resource type="SphereShape3D" id="SphereShape3D_p8xfe"]
radius = 0.35

[sub_resource type="Animation" id="Animation_xs1r2"]
resource_name = "RESET"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite3D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_twutm"]
resource_name = "dash"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [32, 33]
}

[sub_resource type="Animation" id="Animation_in1dn"]
resource_name = "fly"
length = 0.2
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [40, 41, 42, 43]
}

[sub_resource type="Animation" id="Animation_lw84m"]
resource_name = "grab"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [36, 36]
}

[sub_resource type="Animation" id="Animation_rpcuv"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [1, 0]
}

[sub_resource type="Animation" id="Animation_uvqme"]
resource_name = "jump"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [12]
}

[sub_resource type="Animation" id="Animation_iv5ja"]
resource_name = "layer_jump_backward"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [26, 27, 26]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"attempt_change_layer"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite3D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 0), Vector3(0, 0.5, 0), Vector3(0, 0.5, 0), Vector3(0, 0, 0)]
}
tracks/3/type = "audio"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AudioStreamPlayer")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("3_ead5v")
}],
"times": PackedFloat32Array(0.2)
}
tracks/3/use_blend = true

[sub_resource type="Animation" id="Animation_8u2y5"]
resource_name = "layer_jump_forward"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [24, 25, 24]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"attempt_change_layer"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite3D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 0), Vector3(0, 0.5, 0), Vector3(0, 0.5, 0), Vector3(0, 0, 0)]
}
tracks/3/type = "audio"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AudioStreamPlayer")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("3_ead5v")
}],
"times": PackedFloat32Array(0.2)
}
tracks/3/use_blend = true

[sub_resource type="Animation" id="Animation_0eber"]
resource_name = "roll"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [28, 29, 30]
}

[sub_resource type="Animation" id="Animation_7g5oc"]
resource_name = "run"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wllxu"]
_data = {
"RESET": SubResource("Animation_xs1r2"),
"dash": SubResource("Animation_twutm"),
"fly": SubResource("Animation_in1dn"),
"grab": SubResource("Animation_lw84m"),
"idle": SubResource("Animation_rpcuv"),
"jump": SubResource("Animation_uvqme"),
"layer_jump_backward": SubResource("Animation_iv5ja"),
"layer_jump_forward": SubResource("Animation_8u2y5"),
"roll": SubResource("Animation_0eber"),
"run": SubResource("Animation_7g5oc")
}

[node name="PlayerCharacter" type="CharacterBody3D" groups=["player"]]
collision_priority = 10.0
script = ExtResource("1_s6asm")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.05, 0)
shape = SubResource("SphereShape3D_p8xfe")

[node name="GrabMarker" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.75, 0)

[node name="JumpMarker" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.3, 0)

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(0.998841, -0.000926929, 0.0481217, 0.00615584, 0.994064, -0.108626, -0.0477353, 0.108797, 0.992917, 0, 0, 0)
pixel_size = 0.05
shaded = true
texture_filter = 4
texture = ExtResource("1_s6gg6")
hframes = 4
vframes = 11

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_wllxu")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("4_30n41")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine" node_paths=PackedStringArray("player")]
script = ExtResource("5_prgrc")
player = NodePath("../..")

[node name="Busy" type="Node" parent="StateMachine"]
script = ExtResource("8_togvs")

[node name="CurrentJumpAbility" type="Node" parent="."]

[node name="JumpAbility" parent="CurrentJumpAbility" instance=ExtResource("4_2s0ke")]

[node name="CurrentMobilityAbility" type="Node" parent="."]

[node name="SlimeAbility" parent="CurrentMobilityAbility" instance=ExtResource("8_vthax")]

[node name="CurrentAttackAbility" type="Node" parent="."]

[node name="GrabAbility" parent="CurrentAttackAbility" instance=ExtResource("5_imdsf")]
